0.1.1
-----

* Fix an issue where empty columns in a CSV could crash dataset creation.
* Make it possible to specify column types via API at dataset creation time. (#518)
* Import and search specific data columns (search filters). (#494, #506, et al)
* Implement a configurable throttle for asynchronous tasks. (#502)
* Added Justin Edwards to AUTHORS.
* Added favicon.ico. (#512)
* Better handling of timeout errors during file uploads. (#529)
* Implement ability to import specific columns with type data, i.e. filters. (#496)
* Fix bug where blank headers in XLSX files would be labelled "None".
* Fix "unpack requires string length of 14" error during xls upload. (#486)
* Implement locks so import/export processes can not occur simultaneously. (#353)
* Improve handling of queries with inline punctuation. (#461)
* Fix error when adding a category via Admin. (#470)
* Add Niran Babalola to AUTHORS. (#464)
* Suggest deactivating instead of deleting users. (#464)
* Add "view all rows" link to dataset page. (#455)
* Fix bug that caused changes to a dataset made during import to be lost. (#452)
* Add feedback link. (#451)

0.1.0
-----

* Initial beta release.