@@ -164,7 +164,7 @@ class TestAPIDataset(TransactionTestCase):
     def test_create_post_slug(self):
         # Verify that new slugs are NOT created via POST.
         new_dataset = {
-            'slug': 'new-id',
+            'slug': 'new-slug',
             'name': 'New dataset!',
             'description': 'Its got yummy data!'
         }
@@ -175,11 +175,11 @@ class TestAPIDataset(TransactionTestCase):
 
         body = json.loads(response.content)
 
-        self.assertEqual(body['slug'], 'new-dataset')
+        self.assertEqual(body['slug'], 'new-slug')
 
         new_dataset = Dataset.objects.get(id=body['id'])
 
-        self.assertEqual(new_dataset.slug, 'new-dataset')
+        self.assertEqual(new_dataset.slug, 'new-slug')
 
     def test_create_put(self):
         new_dataset = {
@@ -237,7 +237,7 @@ class TestAPIDataset(TransactionTestCase):
 
         response = self.client.put('/api/1.0/dataset/new-slug/', content_type='application/json', data=json.dumps(update_dataset), **self.auth_headers)
 
-        self.assertEqual(response.status_code, 201)
+        self.assertEqual(response.status_code, 202)
 
         body = json.loads(response.content)
 
@@ -245,7 +245,35 @@ class TestAPIDataset(TransactionTestCase):
         self.assertEqual(body['slug'], 'new-slug')
         self.assertEqual(body['id'], dataset_id)
 
-        self.assertEqual(Dataset.objects.all().count(), 1)
+        # One dataset is created by setup
+        self.assertEqual(Dataset.objects.all().count(), 2)
+
+    def test_put_different_slug(self):
+        new_dataset = {
+            'name': 'New dataset!',
+            'description': 'Its got yummy data!'
+        }
+
+        response = self.client.put('/api/1.0/dataset/new-slug/', content_type='application/json', data=json.dumps(new_dataset), **self.auth_headers)
+
+        self.assertEqual(response.status_code, 201)
+
+        update_dataset = {
+            'slug': 'changed-slug',
+            'name': 'Updated dataset!'
+        }
+
+        response = self.client.put('/api/1.0/dataset/new-slug/', content_type='application/json', data=json.dumps(update_dataset), **self.auth_headers)
+
+        self.assertEqual(response.status_code, 202)
+
+        body = json.loads(response.content)
+
+        self.assertEqual(body['slug'], 'new-slug')
+        
+        new_dataset = Dataset.objects.get(id=body['id'])
+
+        self.assertEqual(new_dataset.slug, 'new-slug')
 
     def test_create_as_new_user(self):
         new_user = {
